--- a/1.Introduction.tex
+++ b/1.Introduction.tex
@@ -30,16 +30,16 @@ The plans involve a future target of nearly 70 GW to 150 GW offshore wind power 
 \centering
 %\hspace*{-1.2cm}
     \includegraphics[height = 3cm,width = 12.5cm]{Diagrams/Chapter_1/Energy_conv_system.pdf}
-    \caption{Conventional generators connection to the AC network \cite{denis_migrate_2018}}
+    \caption{Synchronous machine connection to the AC network \cite{denis_migrate_2018}}
     \label{fig:Energy_conv_system}
 \end{figure}
 
 %\section*{Small scale offshore networks}
-The majorly contributing source among the available \gls{RES} is wind energy. Specifically, offshore wind energy is predicted to be the most significant source of energy among the North Sea countries by 2040 \cite{muller2017translate}. As a result, the deployment of offshore wind energy technology is expected to grow further. With the increase in integration of offshore wind energy, the inherent characteristics of offshore wind energy conversion systems will affect the nature of the power system. The vulnerable wind speed conditions due to the uncertain behaviour of wind could lead to variations in the supply and demand, and therefore, fluctuations in voltages and frequency are bound to occur. Moreover, as the power systems become weak due to the decommissioning of synchronous generators in conventional power plants that use non-renewable sources, the integration of offshore wind power plants to such weak power systems pose various research challenges on the power system stability. 
+The majorly contributing source among the available \gls{RES} is wind energy. Specifically, offshore wind energy is predicted to be the most significant source of energy among the North Sea countries by 2040 \cite{muller2017translate}. As a result, the deployment of offshore wind energy technology is expected to grow further. With the increase in integration of offshore wind energy, the inherent characteristics of offshore wind energy conversion systems will affect the nature of the power system. The vulnerable wind speed conditions due to the uncertain behaviour of wind could lead to variations in the supply and demand, and therefore, fluctuations in voltages and frequency are bound to occur. Moreover, as the power systems become weak due to the decommissioning of synchronous generators in conventional power plants that use non-renewable energy sources, the integration of offshore wind power plants to such weak power systems pose various research challenges on the power system stability. 
 
 
-One of the challenges is related to voltage stability. The continuous variations in offshore wind speed cause a constant change in the active power output of the offshore wind power plant. This could lead to an increase in the reactive power output and consequently, the voltage at the point of common coupling (\gls{PCC}). The conventional current control methods using Proportional Integral (\gls{PI}) controllers in the modern Wind Generators (\gls{WG}s) are capable of providing voltage control by injecting reactive currents when connected to a strong network \footnote{SCR = SC$_{MVA}$/P;\; where SC$_{MVA}$ is the short circuit power of the network and P is the active power generation. \\
-If SCR = 100 to 250, it is a strong grid. If SCR = 5 to 25, it is a weak grid.}. However, these controllers are not suitable for operation in highly \gls{PE} converter dominated grids as the connected network is weak and is not capable of absorbing the injected currents. Furthermore, during the scenario of islanding, voltage control by the conventional current controllers is ineffective as the deviation in voltage is not high enough to activate an effective voltage reduction mechanism. There are challenges in terms of frequency stability as well since the conventional current controllers in the \gls{WG}s are not equipped to provide frequency control of the network during islanding. 
+One of the challenges is related to voltage stability. The continuous variation in offshore wind speed causes a constant change in the active power output of the offshore wind power plant. This could lead to an increase in the reactive power output and consequently, the voltage at the point of common coupling (\gls{PCC}). The conventional current control methods using Proportional Integral (\gls{PI}) controllers in the modern Wind Generators (\gls{WG}s) are capable of providing voltage control by injecting reactive currents when connected to a strong network \footnote{SCR = SC$_{MVA}$/P;\; where SC$_{MVA}$ is the short circuit power of the network and P is the active power generation. \\
+If SCR = 100 to 250, it is a strong grid. If SCR = 5 to 25, it is a weak grid.}. However, these controllers are not suitable for operation in highly \gls{PE} converter dominated grids as the connected network is weak and is not capable of absorbing the injected currents. Furthermore, during the scenario of islanding, voltage control by the conventional current controllers is ineffective due to the absence of continuous voltage control, and the deviation in voltage is not high enough to activate an effective voltage reduction mechanism. There are challenges in terms of frequency stability as well since the conventional current controllers in the \gls{WG}s are not equipped to provide frequency control of the network during islanding. 
 
 Currently, the state-of-the-art technology for the transfer of offshore wind power to the onshore system is Voltage Source Converter (\gls{VSC}) based  - High Voltage Direct Current (\gls{HVDC}) transmission links. Presently, Modular Multi-level Converter (\gls{MMC}) topology that falls under the classification of \gls{VSC} topologies is the most suitable solution. Few among the advantages of \gls{MMC} are \cite{cigre_B455}; (1) ease of integration with Offshore Wind Farms (\gls{OWF})s, (2) supporting the bi-directional flow of power between the offshore network and onshore system, and (3) independent control of active and reactive powers in the network. However, with the available technology, \gls{MMC}-\gls{HVDC} transmission are limited to a rated capacity of 1.2 GW \cite{peralta2012detailed}.
 
@@ -48,7 +48,7 @@ The implementation of large scale offshore networks (greater than or equal to 2 
 
 The absence of conventional generators would mean that the \gls{PE} converters will have to take into account the decreasing inertia of the system that leads to faster dynamic behaviour and needs controllers with faster time response. Moreover, in large scale offshore networks, distant \gls{OWF}s would be connected in parallel. With the parallel operation of the conventional current controllers in \gls{WG}s, interactions can persist among them and could lead to instability of the network. Additionally, the restoration of the grid, following disturbances by the \gls{PE} converter units is a serious matter of concern. With the conventional current control approach, grid restoration is challenging without the help of auxiliary diesel generators. However, in the case of large scale offshore networks, the role of grid restoration must be taken up by \gls{PE} converters. There can be arguments that storage facilities such as battery and thermal can be a realizable solution in case when there are no conventional generators available. Huge investment costs, low lifetime and low efficiency when compared to controller modifications are the drawbacks that make these storage facilities practically unusable in large scale offshore networks \cite{telaretti_economic_2016}.
 
-Traditionally, the transmission of power from \gls{OWF} to the offshore converter station uses a combination of 33 kV and 145 kV \gls{HVAC} cables. The \gls{OWF}s are connected to an \gls{AC} offshore platform using 33 kV \gls{HVAC} cables. The platform holds a power transformer that is used to step-up voltage from 33 kV to 145 kV, and power is transferred from the \gls{AC} platform to the offshore converter station using 145 kV \gls{HVAC} cables \cite{abdelwahed2016power}. However, the upcoming projects are expected to have a higher voltage level of 66 kV for transmission to allow twice the amount of power transferred compared to 33 kV. Therefore, this would only require 66 kV \gls{HVAC} cables to directly connect \gls{OWF}s to offshore converter station, avoiding the use of an \gls{AC} collector platform \cite{dnv66kv}. Hence, advancing towards large scale offshore networks, it would be more appropriate to assess the performance of these networks developed with 66 kV \gls{HVAC} transmission. 
+Traditionally, the transmission of power from \gls{OWF} to the offshore converter station uses a combination of 33 kV and 145 kV High Voltage Alternating Current (\gls{HVAC}) cables. The \gls{OWF}s are connected to an Alternating Current (\gls{AC}) offshore platform using 33 kV \gls{HVAC} cables. The platform holds a power transformer that is used to step-up voltage from 33 kV to 145 kV, and power is transferred from the \gls{AC} platform to the offshore converter station using 145 kV \gls{HVAC} cables \cite{abdelwahed2016power}. However, the upcoming projects are expected to have a higher voltage level of 66 kV for transmission to allow twice the amount of power transferred compared to 33 kV. Therefore, this would only require 66 kV \gls{HVAC} cables to directly connect \gls{OWF}s to offshore converter station, avoiding the use of an \gls{AC} collector platform \cite{dnv66kv}. Hence, advancing towards large scale offshore networks, it would be more appropriate to assess the performance of these networks developed with 66 kV \gls{HVAC} transmission. 
 
 % On the \gls{OWF} side, conventionally, the \gls{OWF}s are connected to a \gls{AC} collector platform through 33 kV cables. At the platform, a 33/145 kV transformer is used to step-up the voltage and the power is transferred to the offshore converter station using 145 kV cables. However, the upcoming projects plan to have a rating of 66 kV \gls{HVAC} transmission compared to the conventional combination of 33 kV and 145 kV \gls{HVAC} transmission due to the advantages of lesser array cabling and higher power transmission. In such cases, the \gls{AC} collector platform can be avoided and power can transmitted from the \gls{OWF}s to the offshore converter station directly using 66 kV \gls{HVAC} cables \cite{dnv66kv}.
 
@@ -60,13 +60,13 @@ With the available \gls{MMC}-\gls{HVDC} transmission technology, multiple \gls{M
 
 \section{Literature Review}\label{lit_review}
 
-As seen in Section \ref{Background}, the significant challenges are; development of large scale offshore networks with available technology is challenging, no much knowledge about 66 kV \gls{HVAC} transmission available, and new control strategies are required that can provide better control of voltage and frequency. Hence, a generic model for large scale offshore networks with the latest trend in available technology, and enhanced control strategies is a crucial research requirement. 
+As seen in Section \ref{Background}, the significant challenges are; development of large scale offshore networks with the available technology, no much knowledge about 66 kV \gls{HVAC} transmission available, and new control strategies are required that can provide better control of voltage and frequency. Hence, a generic model for large scale offshore networks with the latest trend in available technology, and enhanced control strategies is a crucial research requirement. 
 
 
 Based on \gls{MMC}-\gls{HVDC} transmission technology, there are mainly three configurations available for the connection of offshore and onshore converter stations \cite{cigre_B455}, \cite{sharifabadi2016design}: 
 \begin{itemize}
     \item Point-to-point connection: The configuration connects one \gls{OWF} to the offshore converter station, which is then connected using \gls{HVDC} link to the onshore converter station.
-    \item Multi-infeed connection: The configuration involves connecting one \gls{OWF} to two different onshore systems by connecting two offshore converter stations on a common bus on the Alternating Current (\gls{AC}) side and transmitting power through two \gls{HVDC} links. Such a configuration allows for increasing the rating of the \gls{OWF} beyond the capacity of a single offshore converter station. The drawback of such a configuration is that it allows the connection of only one \gls{OWF} to the network.
+    \item Multi-infeed connection: The configuration involves connecting one \gls{OWF} to two different onshore systems by connecting two offshore converter stations on a common bus on the \gls{AC} side and transmitting power through two \gls{HVDC} links. Such a configuration allows for increasing the rating of the \gls{OWF} beyond the capacity of a single offshore converter station. The drawback of such a configuration is that it allows the connection of only one \gls{OWF} to the network.
     \item Multi-Terminal Direct
     Current (MTDC) connection: In this configuration, the \gls{HVDC} links of multiple offshore converter stations are connected to the main Direct Current (\gls{DC}) link. Such a configuration enables the transfer of active power to onshore system depending on the capacity of the main \gls{DC} link. However, the major drawback is that complete shutdown and restart of connected \gls{MMC}s is required for a fault on the \gls{DC} side.
 \end{itemize}
@@ -76,12 +76,12 @@ The multi-infeed and the MTDC connections allow for parallel operation of \gls{M
 % On the \gls{OWF} side, 
 
 %The technical challenges regarding voltage and frequency control are key aspects to be considered for the development of large scale networks.
-Typically, \gls{PE} converters in the \gls{WG}s are connected to the network for parallel operation using present state-of-the-art technology, current control strategies. In such control strategies, the regulation of power output of the converters is achieved by measuring the angle of the grid voltage. The drawback of these control strategies is that they require an already existing reference voltage. There are control strategies that create the reference voltage and are termed as voltage control strategies. One among the voltage control strategies is the V/F (voltage/frequency) control that is utilized for operation in the islanded mode. The drawback with V/F control is that it is not equipped for the parallel operation of various voltage forming converter units \cite{weise2019comparison}. Therefore, there need to be new control strategies in the \gls{WG}s that can create the reference voltage and work in parallel operation. Such control strategies are an emerging area of research. There are studies performed to implement control strategies that can create voltage reference and work in parallel operation as well. Few among them are mentioned as follows:
+Typically, \gls{PE} converters in the \gls{WG}s are connected to the network for parallel operation using present state-of-the-art technology, current control strategies. In such control strategies, the regulation of power output of the converters is achieved by measuring the angle of the grid voltage. The drawback of these control strategies is that they require an already existing reference voltage. There are control strategies that create the reference voltage and are termed as voltage control strategies. One among the voltage control strategies is the V/F (voltage/frequency) control that is utilized for operation in the islanded mode. The drawback with V/F control is that it is not equipped for the parallel operation of various voltage forming converter units \cite{weise2019comparison}. Therefore, there need to be new control strategies in the \gls{WG}s that can create the reference voltage and work in parallel operation. Such control strategies are an emerging area of research and studies are being performed in this regard. Few among the new control strategies are mentioned as follows:
 
 % European Network of Transmission System Operators for Electricity (ENTSO-E) classifies converters into three classes (Class 1, Class 2 and Class 3) and the converters working with the strategies mentioned above are categorized under Class 3. The complete requirements that need to be complied by such converters are depicted in \cite{christensen2020high}.
 
 \begin{itemize}
-    \item Virtual Synchronous Machines (VSM): The \gls{PE} converter control is modelled with the characteristics of a synchronous machine in terms of inertia and voltage support by correspondingly deriving the equations \cite{markovic2018lqr}, \cite{duckwitz_operating_behavior}, \cite{lu_virtual_2019}.
+    \item Virtual Synchronous Machines (VSM): The \gls{PE} converter control is modelled with the characteristics of a synchronous machine in terms of inertia and voltage support by correspondingly deriving the equivalent equations \cite{markovic2018lqr}, \cite{duckwitz_operating_behavior}, \cite{lu_virtual_2019}.
     
     \item Modified Droop Control:
     This strategy is common for standalone grids, where the parallel operation of voltage forming units is developed recently using the f/P (frequency/active power) and V/Q (voltage/reactive power) droop controls similar to the control in synchronous generators \cite{bouzid2016simulation}. Few authors have named these droop control concepts as Virtual Synchronous Machines Without Inertia (VSCM0H) \cite{yu2016use}.
@@ -98,7 +98,7 @@ Studies performed by I. Erlich et al. and A. Korai et al. in \cite{erlich_new_20
 It is also good to analyze the effectiveness of other control strategies mentioned above. With a generic offshore network model, different control strategies can be implemented in the \gls{OWF}s, and the complexity related to the interoperability of the controllers can be assessed. However, this lies beyond the scope of this project.
 
 \section{Objectives and Research Questions}
-The overall goal of the thesis is to develop a generic digital twin model of 2 GW, 66 kV \gls{HVAC} offshore network and to perform analysis on the dynamics of voltage and power at various locations in the network. The thesis makes use of the Electro-Magnetic Transient (\gls{EMT}) simulation-based software tools such as RSCAD and PowerFactory to analyze the performance of the developed control models. The average model of Type-4 \gls{WG} available in RSCAD is used as a starting point. The thesis provides a detailed description of the different available features in RSCAD that are employed to develop the 2 GW model. 
+The overall goal of the thesis is to develop a generic digital twin model of 2 GW, 66 kV \gls{HVAC} offshore network and to perform analysis on the dynamics of voltage and power at various locations in the network. The thesis makes use of the Electro-Magnetic Transient (\gls{EMT}) simulation-based software tools such as RSCAD and DIgSILENT PowerFactory to analyze the performance of the developed control models. The average model of Type-4 \gls{WG} available in RSCAD is used as a starting point. The thesis provides a detailed description of the different available features in RSCAD that are employed to develop the 2 GW model. 
 To achieve the overall goal, the following research questions are defined:
 \begin{itemize}
     \item How effective is the Direct Voltage Control (\gls{DVC}) when implemented in an \gls{EMT} average model of Type-4 \gls{WG} connected to a 66 kV equivalent \gls{HVAC} system in RSCAD?
