--- a/Abstract.tex
+++ b/Abstract.tex
@@ -3,14 +3,14 @@
 
 %To meet the Paris agreement, large scale offshore wind energy deployment in the North Sea is a crucial requirement.
 
-The Paris Agreement, which calls for countries to channel their efforts to limit global warming would require the deployment of large scale offshore wind energy in the North Sea. This includes the possibility of developing offshore infrastructure for deploying offshore wind power generation with installed capacity ranging from 70 to 150 GW by 2040 and increasing up to 180 GW by 2045. Presently, the Voltage Source Converter based (VSC based) - High Voltage Direct Current (VSC-HVDC) transmission is considered the most suitable for transfer of offshore wind power from distant offshore wind farms (OWFs) to the onshore system. Amidst the available VSC topologies, Modular Multi-level Converter (MMC) topology is the most appropriate solution for the transfer of offshore wind power to onshore systems due to their enhanced performance during offshore and onshore disturbances. However, the currently deployed state-of-the-art MMC-HVDC transmission has a maximum capacity of 1.2 GW. Compatibility of this available technology for complex systems, with the working of parallel units contributing to the increase in power transfer capacity is still unknown. Hence, this demands the development and analysis of a generic model with parallel operation of MMC-HVDC transmission systems to transfer the bulk amount of power from large scale OWFs. 
+The Paris Agreement, which calls for countries to channel their efforts to limit global warming would require the deployment of large scale offshore wind energy in the North Sea. This includes the possibility of developing offshore infrastructure for deploying offshore wind power generation with installed capacity ranging from 70 to 150 GW by 2040 and increasing up to 180 GW by 2045. Presently, the Voltage Source Converter (VSC) based - High Voltage Direct Current (HVDC) transmission is considered the most suitable for transfer of offshore wind power from distant offshore wind farms (OWFs) to the onshore system. Amidst the available VSC topologies, Modular Multi-level Converter (MMC) topology is the most appropriate solution for the transfer of offshore wind power to onshore systems due to their enhanced performance during offshore and onshore disturbances. However, the currently deployed state-of-the-art MMC-HVDC transmission has a maximum capacity of 1.2 GW. Compatibility of this available technology for complex systems, with the working of parallel units contributing to the increase in power transfer capacity is still unknown. Hence, this demands the development and analysis of a generic model with parallel operation of MMC-HVDC transmission systems to transfer the bulk amount of power from large scale OWFs. 
 
-Additionally, the implementation of large scale offshore networks leads to an increase in the penetration of power electronic (PE) converters in the electrical power system. The increase in PE converters causes technical challenges (e.g. due to unprecedented fast dynamic phenomena) related to voltage and frequency stability, and power flow coordination in the power system. In the OWFs, the currently available current injection-based voltage control for PE converters are not suitable for voltage control in large scale PE dominated systems due to the absence of continuous voltage control and ineffectiveness during islanding. Moreover, in such power systems, the conventional controllers are not suitable for frequency control due to the absence of dynamic frequency control. Therefore, better control strategies are required in large scale offshore networks to enhance the dynamic characteristics of the power system. 
+Additionally, the implementation of large scale offshore networks leads to an increase in the penetration of power electronic (PE) converters in the electrical power system. The increase in PE converters causes technical challenges (e.g. due to unprecedented fast dynamic phenomena) related to voltage and frequency stability, and power flow coordination in the power system. In OWFs, the currently available current injection-based voltage control for PE converters are not suitable for voltage control in large scale PE dominated systems due to the absence of continuous voltage control and ineffectiveness during islanding. Moreover, in such power systems, the conventional controllers are not suitable for frequency control due to the absence of dynamic frequency control. Therefore, better control strategies are required in large scale offshore networks to enhance the dynamic characteristics of the power system. 
 
 Conventionally, the OWFs are coupled to an AC collector platform through 33 kV High Voltage Alternating Current (HVAC) cables. The voltage is stepped-up to 145 kV at the collector platform, and power is transferred to the offshore converter station using 145 kV HVAC cables. However, in the upcoming projects, the rated voltage levels are expected to increase from 33 kV to 66 kV to avoid the use of such a collector platform and directly transfer power from OWFs to the offshore converter station using 66 kV HVAC cables. Hence, it would be better to understand the performance of large scale offshore networks developed with 66 kV voltage rating.   
 
 This thesis proposes a digital twin model of a 2 GW offshore network with the parallel operation of two MMC-HVDC transmission links connecting four OWFs to two onshore systems representing a large scale power system. The MMCs are connected to a common bus on the AC side of the network, with one MMC creating the voltage reference for the common bus and the other MMC following this reference. Additionally, to mitigate the challenges corresponding to voltage and frequency stability in large scale offshore networks, a Direct Voltage Control (DVC) strategy is implemented in the Type-4 Wind Generators (WGs) representing the OWFs. After analyzing the need for 66 kV HVAC transmission from the OWFs to the offshore converter stations, a 66 kV offshore network is developed to achieve 2 GW offshore wind power transfer. The electrical power system is developed in the power system simulation software, RSCAD\textsuperscript{TM} Version 5.011.1, in order to perform Electro-Magnetic Transient (EMT) based simulations. 
 
-Initially, a single OWF with DVC implemented in the WG connected to an AC equivalent system is modelled to test the performance of DVC in a digital twin of a 66 kV HVAC network. The DVC provides continuous voltage control that improves the dynamic performance of the power system. As mentioned in most of the grid codes, the important requirement of reactive power injection by the OWF during dynamic conditions is satisfied by the controller. DVC also avoids the need for an external controller to perform such an action. To validate the working of the implemented DVC in RSCAD, a similar 66 kV HVAC network with the benchmark DVC model is developed in DIgSILENT PowerFactory\textsuperscript{TM} 2019 SP2 (x64), for EMT simulations and tested under severe dynamic conditions. Both the models provide similar results, confirming the validation of the RSCAD model. Moreover, the RSCAD model provides a better representation of the practical environment operation. 
+Initially, a single OWF with DVC implemented in the WG connected to an AC equivalent system is modelled to test the performance of DVC in a digital twin of a 66 kV HVAC network. The DVC provides continuous voltage control that improves the dynamic performance of the power system. As mentioned in most of the grid codes, the important requirement of reactive power injection by the OWF during dynamic conditions is satisfied by the controller. DVC also avoids the need for an external controller to perform such an action. To validate the working of the implemented DVC in RSCAD, a similar 66 kV HVAC network with the benchmark DVC model is developed in DIgSILENT PowerFactory\textsuperscript{TM} 2019 SP2 (x64), for EMT simulations and tested under severe dynamic conditions. Both the models provide similar results, confirming the validation of the RSCAD model. Moreover, the RSCAD model provides a better representation of the real-world operation. 
 
 To achieve the overall goal of developing a 2 GW offshore transmission network, a hybrid system with the hub-and-spoke principle is utilized in this thesis. The 2 GW offshore network is achieved by a modular approach, connecting four OWFs to a common bus, to which two MMCs are connected in parallel. The coordination between the implemented DVC in WGs and the control structures in MMCs is evaluated for different scenarios in the network. The performance of the 2 GW network in terms of short-term voltage stability and power flow during severe dynamic conditions in the grid is analyzed. The two most severe dynamic conditions chosen for assessment are; the disconnection of one OWF, and a three-phase fault in the middle of a HVAC cable. In the analysis, it is observed that even after the loss of generation from one OWF, the voltage at Point of Common Coupling (PCC) of other OWFs remains stable within the tolerance limit of $\pm$ 10 \%. Additionally, the loss of generation decreases the active power flow in MMC-1 since it is the one that creates the voltage reference. The power flow in MMC-2 is maintained with the corresponding active power reference. For the event of a three-phase fault, the OWF is islanded by the operation of a circuit breaker. During this event, with implemented DVC, the important requirement of reactive power injection from the islanded OWF as stated in most of the grid codes is achieved. This leads to the conclusion that the voltage control in MMC-1 provides the voltage reference in the network during the pre-fault and post fault conditions. However, DVC implemented in the WGs of OWFs take up the role of providing the voltage reference at corresponding PCCs when the OWFs are islanded from the network during the time of the fault. 
