--- a/Acknowledgement.tex
+++ b/Acknowledgement.tex
@@ -11,11 +11,11 @@ A special thanks to Dr. Abdul Korai from DIgSILENT GmbH and Shubham Sethi from H
 
 I am extremely grateful for my friends Preetha, Vishal, Medha, Nived, Devika chechi, Adeep and Lee for being my support system and keeping my sanity intact. They are now family to me and have played a huge role in the last two years of my life in Delft. Thank you so much people! A big shout out to Medha and Nived for helping me with the cover picture. 
 
-Finally, Varun and Veena manni for their support. Last but not the least, I take this opportunity to thank Amma and Appa for letting me pursue my ambition, supporting and encouraging me to achieve my dreams. Thank you so much Amma and Appa!   
+Finally, I extend my gratitude to Varun and Veena manni for their love and support. Last but not the least, I take this opportunity to thank Amma and Appa for letting me pursue my ambition, supporting and encouraging me to achieve my dreams. Thank you so much Amma and Appa!   
 
 \vspace{7mm}
 
-"To the Class of 2020.."
+\textit{To the Class of 2020..}
 
 
 \begin{flushright}
