--- a/Appendix-b.tex
+++ b/Appendix-b.tex
@@ -29,7 +29,7 @@
 \end{figure}
 
 \section{Additional graphs}
-\subsection{Three-phase line to ground fault in the middle of the cable}
+\subsection{Three-phase line to ground fault}
 
 \begin{figure}[H]
 %\centering
