--- a/Appendix-d.tex
+++ b/Appendix-d.tex
@@ -16,7 +16,7 @@ $x$                & Converter reactance                                       &
 $k_P$              & Washout filter proportional gain                          & p.u.          & 0.05           \\ \hline
 $T_w$              & Washout filter time constant                              & s             & 0.01           \\ \hline
 \end{tabular}
-\caption{Parameters of reactive power control loop in DVC}
+\caption{Parameters of reactive power control loop in DVC \cite{erlich_description_2018}}
 \label{tab:Reactive_pow_para}
 \end{table}
 
@@ -41,7 +41,7 @@ $T_a$              & Voltage measurement delay                             & s  
                    & Deadband for direct frequency control                 & Hz            & 0.2            \\ \hline
                    & Deadband for voltage dependent active power reduction & p.u.          & 0.1            \\ \hline
 \end{tabular}
-\caption{Parameters of active power control loop in DVC}
+\caption{Parameters of active power control loop in DVC \cite{erlich_description_2018}}
 \label{tab:Active_pow_para}
 \end{table}
 
