--- a/references_3.bib
+++ b/references_3.bib
@@ -1,4 +1,11 @@
 
+@misc{noauthor_migrate_2020,
+	title = {The {MIGRATE} {Project}, {AN} {EU}-{FUNDED} {PROJECT} {UNDER} {THE} {FRAMEWORK} {OF} {EUROPEAN} {UNION}'{S} {HORIZON} 2020},
+	url = {https://www.h2020-migrate.eu/},
+	urldate = {2020-10-19},
+	year = {2020}
+}
+
 @misc{noauthor_worlds_2020,
 	title = {World’s {Most} {Powerful} {Offshore} {Wind} {Turbine}: {Haliade}-{X} 12 {MW} {\textbar} {GE} {Renewable} {Energy}},
 	url = {https://www.ge.com/renewableenergy/wind-energy/offshore-wind/haliade-x-offshore-turbine},
@@ -1005,7 +1012,6 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	year = {2018},
 	pages = {1661}
 }
-
 @article{ramachandran_ac_2018,
 	title = {{AC} {Grid} {Forming} by {Coordinated} {Control} of {Offshore} {Wind} {Farm} connected to {Diode} {Rectifier} based {HVDC} {Link}-{Review} and {Assessment} of {Solutions}},
 	abstract = {Diode Rectifier (DR) based HVDC transmissions can significantly reduce system costs and foot print of an HVDC based Offshore Wind Farm (OWF), but the control of the offshore AC grid becomes challenging. The replacement of the offshore Voltage Source Converter (VSC) by a passive DR leads to major research questions pertaining to the control of the offshore AC grid. To achieve stable wind farm operation, many grid forming solutions have been devised. This paper reviews a few of the major control solutions for AC grid forming and operation of DR-HVDC based OWFs. Then these solutions are compared based on their approach in solving the major challenges involved. Then two of the solutions are selected for implementation in a study case electrical architecture. Using the simulation results and further analyses, the approaches adopted by these two solutions are elaborated further and the various challenges of DR-HVDC based OWF technology are highlighted.},
@@ -1045,6 +1051,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	year = {2018},
 	pages = {1264--1274}
 }
+
 @book{gonzalez-longatt_advanced_2018,
 	address = {Cham},
 	series = {Green {Energy} and {Technology}},
@@ -1663,7 +1670,6 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	year = {2020},
 	pages = {1914}
 }
-
 @techreport{noauthor_abb_nodate,
 	title = {{ABB} {Review}}
 }
@@ -1674,6 +1680,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	url = {https://search.abb.com/library/Download.aspx?DocumentID=9AKK106103A8195&LanguageCode=en&DocumentPartId=&Action=Launch},
 	urldate = {2020-08-29}
 }
+
 @misc{noauthor_tennet_2020,
 	title = {{TenneT} develops first {2GW} offshore grid connection with suppliers},
 	url = {https://www.tennet.eu/news/detail/tennet-develops-first-2gw-offshore-grid-connection-with-suppliers/},
@@ -1927,7 +1934,6 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	month = sep,
 	year = {2017}
 }
-
 @book{conseil_international_des_grands_reseaux_electriques_power_2013,
 	address = {Paris] (21 rue d'Artois, 75008)},
 	title = {Power system technical performance issues related to the application of {Long} {HVAC} cables},
@@ -1938,6 +1944,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	year = {2013},
 	note = {OCLC: 863058198}
 }
+
 @inproceedings{korai_new_2019,
 	address = {Milan, Italy},
 	title = {New control approach for blackstart capability of full converter wind turbines with direct voltage control},
