--- a/title.tex
+++ b/title.tex
@@ -21,7 +21,7 @@
 {\makeatletter
 \ifx\@subtitle\undefined\else
     \bigskip
-    \titlefont\titleshape\LARGE\@subtitle
+    \titlefont\titleshape\Huge\@subtitle
 \fi
 \makeatother}
 
@@ -36,7 +36,7 @@ by
 
 %% Print the name of the author.
 {\makeatletter
-\titlefont\Large\bfseries\@author
+\titlefont\Huge\bfseries\@author
 \makeatother}
 
 \vfill
@@ -77,7 +77,7 @@ to be defended on October 29, 2020 at 10:00 AM.
 \vspace{35mm}
 %% Only include the following lines if confidentiality is applicable.
 \bigskip
-\emph{This thesis is confidential and cannot be made public until October 29, 2022.}
+\emph{This thesis is confidential and cannot be made public until December 31, 2022.}
 %\emph{Op dit verslag is geheimhouding van toepassing tot en met 31 december 2013.}
 
 \bigskip
